@@ -12,6 +12,7 @@ Coccinella-0.94.9 (04????): 	Short summary --
 	- reworked the groupchat dialog from scratch
 	- major restructure of all browse code
 	- added support for emoticon sets
+	- added disco support
 
 
 Coccinella-0.94.8 (040305): 	Short summary --
